clusters/apps/default/services/design/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: design
  namespace: design
spec:
  selector:
    app: "design"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
