clusters/apps/default/services/design/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: design
  namespace: design
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "design.home.jrbeverly.dev"
      secretName: "design-tls"
  rules:
  - host: "design.home.jrbeverly.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: design
            port:
              number: 80
